# Appviewcamera

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: android-build.yml  termux-gateway.yml
docs/: android-gateway.md  build-verification.md  database-schema.md  drive-primary-migration.md  indexed-playback.md  multi-gateway-viewer.md  phase-1.md  phase-2.md  phase-3-termux.md  phase-4-viewer-live.md  phase-6-14-recording-playback.md  phase-9-google-drive.md  phase-youtube-private.md  roadmap.md
gateway/: build.gradle.kts  proguard-rules.pro
gateway/src/main/: AndroidManifest.xml
gateway/src/main/java/com/banupham/appviewcamera/gateway/: GatewayState.kt  (+2 more)
termux-gateway/: README.md  pyproject.toml
termux-gateway/config/: cameras.yaml  gateway.json  gateway.yaml  google-drives.json  google-drives.yaml  recording.json  recording.yaml  youtube.json
termux-gateway/scripts/: doctor.sh  install.sh  pairing.sh  start.sh  status.sh  stop.sh  update.sh  updategateway.sh
termux-gateway/src/appviewcamera_gateway/: __init__.py  __main__.py  api.py  config.py  database.py  discovery.py  drive_oauth.py  mediamtx.py  motion.py  playback.py  recording.py  storage.py
termux-gateway/src/appviewcamera_gateway/youtube/: __init__.py  account.py  batch.py  index.py  oauth.py  processing.py  retry.py  uploader.py  worker.py
termux-gateway/tests/: conftest.py  test_api.py  test_config.py  test_database.py  test_discovery.py  test_drive_oauth.py  test_recording.py  test_storage.py  test_youtube.py
viewer/: build.gradle.kts
viewer/src/main/: AndroidManifest.xml
(+78 files in other folders)
