[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "appviewcamera-gateway"
version = "0.3.0"
description = "Termux gateway for AppViewCamera"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "PyYAML>=6,<7",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
]

[project.scripts]
appviewcamera-gateway = "appviewcamera_gateway.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
