[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "appviewcamera-gateway"
version = "0.3.0"
description = "Termux gateway for AppViewCamera"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
]

[project.scripts]
appviewcamera-gateway = "appviewcamera_gateway.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
